// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomeView.vue > debería coincidir con el snapshot 1`] = `
"<main class="presentation-page py-4">
  <!-- Hero Section -->
  <section class="hero-section text-center py-5 mb-4" aria-labelledby="main-title">
    <div class="container">
      <h1 id="main-title" class="growstudio-title mb-3">GrowStudio</h1>
      <p class="tagline lead mb-4 text-white-50">Creciendo día a día</p>
      <router-link to="/reserva" class="btn btn-warning btn-lg fw-bold px-4 px-md-5 py-3 link" role="button" aria-label="Reserva tu cita ahora"> Reserva aquí <i class="bi bi-arrow-right ms-2" aria-hidden="true"></i></router-link>
    </div>
  </section><!-- Reseñas Section -->
  <section class="reviews-section pb-5 mb-5" aria-labelledby="reviews-title">
    <div class="container">
      <div class="row mb-4">
        <div class="col-12 text-center">
          <h2 id="reviews-title" class="section-title position-relative d-inline-block mb-4">Lo que dicen nuestros clientes</h2>
        </div>
      </div>
      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Joan Marc Ferrer</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Partiendo de la base que es un gran profesional, el trato que te da, perfecto como lo profesional que es, y comodidades para tu poder acudir a tus citas, ya que hay que compaginar con el trabajo y horarios. Recomiendo que vengan a peluquería GROW</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Fran Santos</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Un 10 en todo, destaca la profesionalidad, el ambiente tranquilo, y lo mejor es la relación calidad-precio que para mí es la mejor que hay en todo Santa Cruz.</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Yorel Brito</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Buena disponibilidad de horarios, excelente calidad de cortes y trato al cliente inmejorable, te dan hasta café 😉…</p>
              </blockquote>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section><!-- Map Section -->
  <section class="map-section py-5 bg-opacity-50 rounded-4 my-5" aria-labelledby="location-title">
    <div class="container">
      <div class="row align-items-center gy-5">
        <div class="col-lg-6 order-lg-2">
          <div class="map-wrapper position-relative rounded-4 overflow-hidden border border-warning shadow-lg">
            <div class="ratio ratio-16x9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.4938194818415!2d-16.27500552419241!3d28.46467139168318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc41cd215ef7e233%3A0x6243e6fcd877a6fb!2sGrow%20Barber%20%26%20Studio!5e0!3m2!1ses!2ses!4v1739308761242!5m2!1ses!2ses" title="Mapa de ubicación de GrowStudio" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Ubicación de GrowStudio en Google Maps"></iframe></div>
          </div>
        </div>
        <div class="col-lg-6 order-lg-1 text-center text-lg-start">
          <h2 id="location-title" class="section-title position-relative mb-4">Visítanos en el corazón de Santa Cruz</h2>
          <p class="fs-5 text-light mb-4"> GrowStudio está ubicado en una zona de fácil acceso con aparcamiento cercano. Ven a relajarte, renovar tu estilo y disfrutar de un ambiente único pensado para ti. </p>
          <p class="highlight-text text-warning fw-semibold d-inline-block py-2 px-4">¡Te esperamos con café y buena vibra!</p>
        </div>
      </div>
    </div>
  </section>
</main>"
`;

exports[`HomeView.vue > matches the snapshot 1`] = `
"<main class="presentation-page py-4">
  <!-- Hero Section -->
  <section class="hero-section text-center py-5 mb-4" aria-labelledby="main-title">
    <div class="container">
      <h1 id="main-title" class="growstudio-title mb-3">GrowStudio</h1>
      <p class="tagline lead mb-4 text-white-50">Creciendo día a día</p><a to="/reserva" class="btn btn-warning btn-lg fw-bold px-4 px-md-5 py-3 link" role="button" aria-label="Reserva tu cita ahora"> Reserva aquí <i class="bi bi-arrow-right ms-2" aria-hidden="true"></i></a>
    </div>
  </section><!-- Reseñas Section -->
  <section class="reviews-section pb-5 mb-5" aria-labelledby="reviews-title">
    <div class="container">
      <div class="row mb-4">
        <div class="col-12 text-center">
          <h2 id="reviews-title" class="section-title position-relative d-inline-block mb-4">Lo que dicen nuestros clientes</h2>
        </div>
      </div>
      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Joan Marc Ferrer</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Partiendo de la base que es un gran profesional, el trato que te da, perfecto como lo profesional que es, y comodidades para tu poder acudir a tus citas, ya que hay que compaginar con el trabajo y horarios. Recomiendo que vengan a peluquería GROW</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Fran Santos</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Un 10 en todo, destaca la profesionalidad, el ambiente tranquilo, y lo mejor es la relación calidad-precio que para mí es la mejor que hay en todo Santa Cruz.</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Yorel Brito</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Buena disponibilidad de horarios, excelente calidad de cortes y trato al cliente inmejorable, te dan hasta café 😉…</p>
              </blockquote>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section><!-- Map Section -->
  <section class="map-section py-5 bg-opacity-50 rounded-4 my-5" aria-labelledby="location-title">
    <div class="container">
      <div class="row align-items-center gy-5">
        <div class="col-lg-6 order-lg-2">
          <div class="map-wrapper position-relative rounded-4 overflow-hidden border border-warning shadow-lg">
            <div class="ratio ratio-16x9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.4938194818415!2d-16.27500552419241!3d28.46467139168318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc41cd215ef7e233%3A0x6243e6fcd877a6fb!2sGrow%20Barber%20%26%20Studio!5e0!3m2!1ses!2ses!4v1739308761242!5m2!1ses!2ses" title="Mapa de ubicación de GrowStudio" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Ubicación de GrowStudio en Google Maps"></iframe></div>
          </div>
        </div>
        <div class="col-lg-6 order-lg-1 text-center text-lg-start">
          <h2 id="location-title" class="section-title position-relative mb-4">Visítanos en el corazón de Santa Cruz</h2>
          <p class="fs-5 text-light mb-4"> GrowStudio está ubicado en una zona de fácil acceso con aparcamiento cercano. Ven a relajarte, renovar tu estilo y disfrutar de un ambiente único pensado para ti. </p>
          <p class="highlight-text text-warning fw-semibold d-inline-block py-2 px-4">¡Te esperamos con café y buena vibra!</p>
        </div>
      </div>
    </div>
  </section>
</main>"
`;

exports[`PresentationPage Snapshots > coincide con el snapshot 1`] = `
"<main class="presentation-page py-4">
  <!-- Hero Section -->
  <section class="hero-section text-center py-5 mb-4" aria-labelledby="main-title">
    <div class="container">
      <h1 id="main-title" class="growstudio-title mb-3">GrowStudio</h1>
      <p class="tagline lead mb-4 text-white-50">Creciendo día a día</p><a href="/reserva" class="btn btn-warning btn-lg fw-bold px-4 px-md-5 py-3 link" role="button" aria-label="Reserva tu cita ahora"> Reserva aquí <i class="bi bi-arrow-right ms-2" aria-hidden="true"></i></a>
    </div>
  </section><!-- Reseñas Section -->
  <section class="reviews-section pb-5 mb-5" aria-labelledby="reviews-title">
    <div class="container">
      <div class="row mb-4">
        <div class="col-12 text-center">
          <h2 id="reviews-title" class="section-title position-relative d-inline-block mb-4">Lo que dicen nuestros clientes</h2>
        </div>
      </div>
      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Joan Marc Ferrer</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Partiendo de la base que es un gran profesional, el trato que te da, perfecto como lo profesional que es, y comodidades para tu poder acudir a tus citas, ya que hay que compaginar con el trabajo y horarios. Recomiendo que vengan a peluquería GROW</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Fran Santos</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Un 10 en todo, destaca la profesionalidad, el ambiente tranquilo, y lo mejor es la relación calidad-precio que para mí es la mejor que hay en todo Santa Cruz.</p>
              </blockquote>
            </div>
          </div>
        </div>
        <div class="col">
          <div class="review-card card h-100 bg-dark border-warning p-2 shadow-lg">
            <div class="card-body d-flex flex-column">
              <div class="d-flex justify-content-between align-items-center mb-3">
                <h3 class="card-title h5 text-white mb-0">Yorel Brito</h3>
                <div class="rating-stars text-warning" aria-label="Valoración: 5 estrellas"><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i><i class="bi bi-star-fill" aria-hidden="true"></i></div>
              </div>
              <blockquote class="card-text text-white-50 flex-grow-1 mb-0">
                <p class="mb-0 text-light">Buena disponibilidad de horarios, excelente calidad de cortes y trato al cliente inmejorable, te dan hasta café 😉…</p>
              </blockquote>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section><!-- Map Section -->
  <section class="map-section py-5 bg-opacity-50 rounded-4 my-5" aria-labelledby="location-title">
    <div class="container">
      <div class="row align-items-center gy-5">
        <div class="col-lg-6 order-lg-2">
          <div class="map-wrapper position-relative rounded-4 overflow-hidden border border-warning shadow-lg">
            <div class="ratio ratio-16x9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.4938194818415!2d-16.27500552419241!3d28.46467139168318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc41cd215ef7e233%3A0x6243e6fcd877a6fb!2sGrow%20Barber%20%26%20Studio!5e0!3m2!1ses!2ses!4v1739308761242!5m2!1ses!2ses" title="Mapa de ubicación de GrowStudio" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Ubicación de GrowStudio en Google Maps"></iframe></div>
          </div>
        </div>
        <div class="col-lg-6 order-lg-1 text-center text-lg-start">
          <h2 id="location-title" class="section-title position-relative mb-4">Visítanos en el corazón de Santa Cruz</h2>
          <p class="fs-5 text-light mb-4"> GrowStudio está ubicado en una zona de fácil acceso con aparcamiento cercano. Ven a relajarte, renovar tu estilo y disfrutar de un ambiente único pensado para ti. </p>
          <p class="highlight-text text-warning fw-semibold d-inline-block py-2 px-4">¡Te esperamos con café y buena vibra!</p>
        </div>
      </div>
    </div>
  </section>
</main>"
`;
